kubernetes/apps/home-automation/home-assistant/external/endpoint.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: homeassistant
  labels:
    kubernetes.io/service-name: homeassistant
subsets:
  - addresses:
      - ip: "10.17.1.4"
    ports:
      - name: http
        protocol: TCP
        port: 8123
