kubernetes/apps/home-automation/home-assistant/external/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: home-cloud
spec:
  type: LoadBalancer
  loadBalancerIP: "${SVC_HOMEASSISTANT_ADDR}"
  ports:
    - name: http
      port: 8123
      targetPort: 8123
      appProtocol: kubernetes.io/wss
