kubernetes/apps/home-automation/home-assistant/external/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "home-assistant"
  labels:
    name: homeassistant
spec:
  hostnames:
    - hass.aresu.eu
    - homeassistant.aresu.eu
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: home-assistant
      matches:
        - path:
            type: PathPrefix
            value: /
