kubernetes/apps/home-automation/home-assistant/external/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant
  annotations:
    ingress.cilium.io/loadbalancer-mode: dedicated
    hajimari.io/enable: "true"
    hajimari.io/icon: "home-assistant"
  labels:
    name: homeassistant
spec:
  ingressClassName: "external-nginx"
  rules:
    - host: &host "homeassistant.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: homeassistant
                port:
                  name: http
